# vibraclip

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  Makefile  README.md  create_lmdb.py  env_cpu.yml  env_gpu.yml  main_ft.py  main_ir.py  main_ir_raman.py  main_optuna.py  pyproject.toml
configs/: config.yaml  config_ft.yaml
notebooks/: baseline.ipynb  missing_data_analysis.ipynb  vibraclip_metrics.ipynb  vibraclip_plots.ipynb
scripts/: create_qm9s_pickle.py
vibraclip/callbacks/: callbacks.py
vibraclip/datasets/: qm9_dataset.py
vibraclip/models/: vibraclip_ir.py  vibraclip_ir_raman.py
vibraclip/preprocessing/: graph.py
