# Copyright (c) 2025 - Institute of Chemical Research of Catalonia (ICIQ)
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibraclip"
version = "0.0.1"
description = "Smart Multi-Modal Vibrational Characterization of Organic Molecules"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Pau Rocabert-Oriols", email = "procabert@iciq.es"},
    { name = "Javier Heras-Domingo", email = "jheras@iciq.es"}
]
keywords = ["Vibrational spectroscopy", "Deep Learning", "Smart Characterization"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jherasdo/vibraclip"

[tool.setuptools]
packages = ["vibraclip"]
